pkg/lang/testdata/ub/comprehensions/valid/distinct-names.ub
locals: {
  xs: [1, 2]
  ys: [ for x in local.xs : [ for y in local.xs : x + y ] ]
}
