pkg/lang/testdata/ub/comprehensions/invalid/filter-rebind.ub
locals: {
  xs: [1, 2]
  ys: [ for x in local.xs : x when @core.length([ for x in local.xs : x ]) > 0 ]
}
